transmission/transmission-service.yml
apiVersion: v1
kind: Service
metadata:
  name: transmission-service
  namespace: home-media
spec:
  selector:
    app: transmission
  ports:
    - name: web-ui
      port: 80
      targetPort: 9091
      protocol: TCP
    - name: torrent-tcp
      port: 51413
      targetPort: 51413
      protocol: TCP
    - name: torrent-udp
      port: 51413
      targetPort: 51413
      protocol: UDP
  type: NodePort
